20일차 enum까지 마무리